[gd_scene load_steps=9 format=3 uid="uid://b36chafq883np"]

[ext_resource type="VideoStream" path="res://Vídeo-sin-título-‐-Hecho-con-Clipchamp-_2_.ogv" id="1_d4swr"]
[ext_resource type="Script" path="res://scenes/Buttons.gd" id="2_p8afu"]
[ext_resource type="Texture2D" uid="uid://dkfpyresiq14" path="res://Botones/Botones/Play.png" id="2_xtqsd"]
[ext_resource type="Texture2D" uid="uid://cq3nyug3hwenk" path="res://Botones/Botones/Exit.png" id="3_q0827"]
[ext_resource type="Texture2D" uid="uid://diupg6iysfl8w" path="res://Botones/Botones/How to play.png" id="4_qsxv7"]
[ext_resource type="Texture2D" uid="uid://1hvy5bfy61hu" path="res://Botones/Press/Play_press.png" id="6_6rkss"]
[ext_resource type="Texture2D" uid="uid://cmnx3jxdj5610" path="res://Botones/Press/How to play_press.png" id="6_y5rl4"]
[ext_resource type="Texture2D" uid="uid://cpsgu065o1u0o" path="res://Botones/Press/Exit_press.png" id="8_b7fa0"]

[node name="Menu" type="Node2D"]

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1088.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.67, 0.67)
stream = ExtResource("1_d4swr")
autoplay = true
loop = true

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_p8afu")

[node name="Play button" type="TextureButton" parent="Buttons"]
layout_mode = 2
offset_left = 408.0
offset_top = 282.0
offset_right = 1898.0
offset_bottom = 459.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("2_xtqsd")
texture_hover = ExtResource("6_6rkss")

[node name="HowToPlay Button" type="TextureButton" parent="Buttons"]
layout_mode = 2
offset_left = 411.0
offset_top = 348.0
offset_right = 1879.0
offset_bottom = 520.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("4_qsxv7")
texture_hover = ExtResource("6_y5rl4")

[node name="Exit Button" type="TextureButton" parent="Buttons"]
layout_mode = 2
offset_left = 409.0
offset_top = 419.0
offset_right = 1877.0
offset_bottom = 591.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("3_q0827")
texture_hover = ExtResource("8_b7fa0")

[connection signal="pressed" from="Buttons/Play button" to="Buttons" method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/Exit Button" to="Buttons" method="_on_exit_button_pressed"]
